# exam-haiti-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml
api/: admin.py  agent.py  pdf.py
app/: __init__.py  config.py  deps.py  main.py
core/: __init__.py  chunking.py  chunking_graph.py  chunking_strategy.py  exam_agent.py  graph_extraction_graph.py  patterns.py
core/prompts/: __init__.py  agent.py
data/chroma/: chroma.sqlite3
data/chroma/769c1d55-05af-4a8e-8ad3-8d74029163c9/: index_metadata.pickle
docs/: api.md  chunk_strategy.md  neo4j_graph_implementation.md  pdf_document_structure.md  unified_pipeline_integration.md
docs/plans/: 2026-03-12-rag-agent-design.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/: AdminAuthProvider.tsx  PasswordPrompt.tsx  Providers.tsx
frontend/src/lib/: apiClient.ts
frontend/src/types/: api.ts
logs_config/: __init__.py  config.py  handlers.py
models/: chunk.py  exam.py  graph_extraction.py  graph_nodes.py
rag/: __init__.py
rag/chains/: __init__.py
rag/nodes/: __init__.py
scripts/: sync_graph.py  test_chunking.py
services/: agent_tools.py  doc_analyzer.py  exam_indexer.py  graph_builder.py  graph_query.py  ingestion_pipeline.py  pdf_analyzer.py  pdf_processor.py  research_agent.py  unified_pipeline.py
services/tools/: __init__.py  embed_tool.py  graph_tool.py
tests/: test_api.py  test_chunking.py  test_config.py  test_logging.py  test_pdf_analyzer.py
(+12 files in other folders)
